# builder

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose_test.yml  pyproject.toml  requirements.txt
src/: asgi.py
src/builder/: controller.py  interactor.py  router.py  schema.py
tests/: test.py
tests/utest_builder/: data.py  test.py
